--- a/app/src/main/res/layout/single_item.xml
+++ b/app/src/main/res/layout/single_item.xml
@@ -52,6 +52,7 @@
             android:orientation="horizontal"
             android:padding="0dp">
 
+            <!--Text view for showing the options menu-->
             <TextView
                 android:id="@+id/textViewOptions"
                 android:layout_width="match_parent"
